# claude-code-search

./: .gitignore  README.md  pyproject.toml
artifacts/: execution-plan.json  prd.json  progress.json  spec.json
docs/: design.md
src/claude_history_search/: __init__.py  cli.py  indexer.py  loader.py  search.py
tests/: __init__.py  test_cli.py  test_indexer.py  test_integration.py  test_loader.py  test_search.py
