[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-history-search"
version = "0.1.0"
description = "Semantic search over Claude Code conversation history"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Anoop Sharma" }
]
keywords = ["claude", "search", "semantic", "cli", "conversation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "click>=8.1.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
claude-search = "claude_history_search.cli:main"

[project.urls]
Homepage = "https://github.com/anoopsharma/claude-history-search"
Repository = "https://github.com/anoopsharma/claude-history-search"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_history_search"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=claude_history_search --cov-report=term-missing --cov-report=html --cov-fail-under=80"

[tool.coverage.run]
source = ["src/claude_history_search"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if DEBUG:",
    "if __name__ == .__main__.:",
]
show_missing = true
